<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_gravity="center"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:paddingTop="11dp">


            <!--
            android:layout_below="@+id/name_text_view"-->


            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="93dp"
                android:layout_height="88dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="53dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/textViewNombre"
                android:layout_width="267dp"
                android:layout_height="43dp"

                android:layout_above="@+id/textViewProvider"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="114dp"
                android:layout_marginLeft="114dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="33dp"
                android:hint="@string/edtiTextNombreProducto"
                android:textColor="@color/name_text_color"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewProvider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="113dp"
                android:layout_marginLeft="113dp"
                android:layout_marginEnd="85dp"
                android:layout_marginRight="85dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/textViewProvider"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="178dp"
                android:layout_marginLeft="178dp"
                android:layout_marginEnd="116dp"
                android:layout_marginRight="116dp"
                android:layout_marginBottom="59dp"
                android:hint="@string/textViewPrice" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="114dp"
                android:layout_marginLeft="114dp"
                android:layout_marginEnd="209dp"
                android:layout_marginRight="209dp"
                android:layout_marginBottom="59dp"
                android:text="@string/textViewPrice" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="113dp"
                android:layout_marginLeft="113dp"
                android:layout_marginEnd="210dp"
                android:layout_marginRight="210dp"
                android:layout_marginBottom="37dp"
                android:text="@string/textViewEnvio" />

            <TextView
                android:id="@+id/textViewEnvio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="178dp"
                android:layout_marginLeft="178dp"
                android:layout_marginEnd="116dp"
                android:layout_marginRight="116dp"
                android:layout_marginBottom="37dp"
                android:hint="@string/textViewEnvio" />

            <ImageView
                android:id="@+id/imageViewRight"
                android:layout_width="55dp"
                android:layout_height="47dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="312dp"
                android:layout_marginLeft="312dp"
                android:layout_marginTop="92dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_chevron_right" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>